# corrow-checker

./: .gitignore  Cargo.toml
corrow-checker/: Cargo.toml
corrow-checker/src/: cfg.rs  check.rs  lower.rs  main.rs  report.rs
examples/: cf_4c.c  malloc_leak1.c  use_after_move1.c  use_after_move3.c
src/: cfg.rs  check.rs  lower.rs  main.rs  utils.rs
tests/: cf_4c.c  cf_4c.stderr  malloc_leak1.c  malloc_leak1.stderr  ternary.stderr  use_after_move1.stderr  use_after_move2.c  use_after_move2.stderr  use_after_move3.stderr
tests/lang-features/: cast.c  cast.stderr  comma.c  comma.stderr  function_call.c  function_call.stderr  global.c  global.stderr  ternary.c
xtask/: Cargo.toml
xtask/src/: main.rs
