[package]
name = "corrow-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ariadne = "0.3.0"
clap = { version = "4.4.8", features = ["derive"] }
crepe = "0.1.8"
la-arena = "0.3.1"
lang-c = { git = "https://github.com/HKalbasi/lang-c.git" }
