[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
xshell = "0.2.5"
strip-ansi-escapes = "0.2.0"
clap = { version = "4.4.7", features = ["derive"] }
